WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95670
[EFL] Fix resizing issues related to URL bar in Minibrowser / EWebLauncher
https://bugs.webkit.org/show_bug.cgi?id=95670
Summary
[EFL] Fix resizing issues related to URL bar in Minibrowser / EWebLauncher
Chris Dumez
Reported
2012-09-03 00:13:47 PDT
The layout is incorrect upon resizing the window in Minibrowser / EWebLauncher: 1. The URL bar is not resized accordingly 2. The page is moved behind the URL bar and we miss the top of the page.
Attachments
Patch
(5.60 KB, patch)
2012-09-03 00:15 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(6.93 KB, patch)
2012-09-03 00:44 PDT
,
Chris Dumez
kenneth
: review+
Details
Formatted Diff
Diff
Patch for landing
(6.94 KB, patch)
2012-09-03 00:50 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-09-03 00:15:55 PDT
Created
attachment 161867
[details]
Patch
Ryuan Choi
Comment 2
2012-09-03 00:33:14 PDT
Comment on
attachment 161867
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=161867&action=review
Thank you for the fixing.
> Tools/EWebLauncher/url_bar.c:85 > +void > +url_bar_update_size(Url_Bar *urlBar, int width) > +{
How do you think about url_bar_resize for Efl friendly naming.
> Tools/MiniBrowser/efl/main.c:291 > - MiniBrowser *browser = browserCreate(url, engine); > + browser = browserCreate(url, engine);
IMO, this is not necessary.
Ryuan Choi
Comment 3
2012-09-03 00:42:54 PDT
(In reply to
comment #2
)
> (From update of
attachment 161867
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=161867&action=review
> > > Tools/MiniBrowser/efl/main.c:291 > > - MiniBrowser *browser = browserCreate(url, engine); > > + browser = browserCreate(url, engine); > > IMO, this is not necessary.
Never mind. In order to simplify issue, this approach is reasonable to me.
Chris Dumez
Comment 4
2012-09-03 00:44:20 PDT
Created
attachment 161871
[details]
Patch Take ryuan's feedback into consideration (thanks!).
Kenneth Rohde Christiansen
Comment 5
2012-09-03 00:46:29 PDT
Comment on
attachment 161871
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=161871&action=review
> Tools/EWebLauncher/main.c:159 > +find_app_with_ee(Ecore_Evas *ee)
from_ee?
Chris Dumez
Comment 6
2012-09-03 00:50:51 PDT
Created
attachment 161872
[details]
Patch for landing Take Kenneth's feedback into consideration.
WebKit Review Bot
Comment 7
2012-09-03 01:50:11 PDT
Comment on
attachment 161872
[details]
Patch for landing Clearing flags on attachment: 161872 Committed
r127411
: <
http://trac.webkit.org/changeset/127411
>
WebKit Review Bot
Comment 8
2012-09-03 01:50:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug