[EFL] Fix resizing issues related to URL bar in Minibrowser / EWebLauncher https://bugs.webkit.org/show_bug.cgi?id=95670

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-09-03
Reviewed by Kenneth Rohde Christiansen.

Fix layout issues related to the URL bar in Minibrowser
and EWebLauncher when the window is resized.

The URL bar was not resized accordingly and the Web
page was moved behing the URL bar, hiding part of it.

* EWebLauncher/main.c:
(on_ecore_evas_resize):
(closeWindow):
* EWebLauncher/url_bar.c:
(url_bar_width_set):
(url_bar_add):
* EWebLauncher/url_bar.h:
* MiniBrowser/efl/main.c:
(on_ecore_evas_resize):
(main):

Canonical link: https://commits.webkit.org/113569@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127411 268f45cc-cd09-0410-ab3c-d52691b4dbfc